; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/wpi/extr_if_wpi.c_wpi_prph_setbits.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/wpi/extr_if_wpi.c_wpi_prph_setbits.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wpi_softc = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.wpi_softc*, i32, i32)* @wpi_prph_setbits to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wpi_prph_setbits(%struct.wpi_softc* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.wpi_softc*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.wpi_softc* %0, %struct.wpi_softc** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.wpi_softc*, %struct.wpi_softc** %4, align 8
  %8 = load i32, i32* %5, align 4
  %9 = load %struct.wpi_softc*, %struct.wpi_softc** %4, align 8
  %10 = load i32, i32* %5, align 4
  %11 = call i32 @wpi_prph_read(%struct.wpi_softc* %9, i32 %10)
  %12 = load i32, i32* %6, align 4
  %13 = or i32 %11, %12
  %14 = call i32 @wpi_prph_write(%struct.wpi_softc* %7, i32 %8, i32 %13)
  ret void
}

declare dso_local i32 @wpi_prph_write(%struct.wpi_softc*, i32, i32) #1

declare dso_local i32 @wpi_prph_read(%struct.wpi_softc*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
